--- a/alt-server/package.json
+++ b/alt-server/package.json
@@ -27,7 +27,9 @@
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
+    "socket.io": "^4.8.3",
     "sqlite3": "^5.1.7"
   }
 }
